# recruitment_task_v2

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  make.sh  pyproject.toml  requirements.txt  setup.cfg
task/: ConversionTools.py  Logger.py  conversionTools.py  main.py
task/tests/: conftest.py
tests/: conftest.py  test_class_conversiontools.py  test_class_logging.py  test_classes.py
