[tool.poetry]
name = "recruitment_task"
version = "1.0.0"
description = "Recruitment task"
authors = ["Mephistowka <alekseev.a@ajax.systems>"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.19.0"
pytest = ">=7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
